Agregamos la conexión de la base de datos a la aplicacion

--- a/Curso_de_Java_Spring1/platzi-market/platzi-market/src/main/resources/application-dev.properties
+++ b/Curso_de_Java_Spring1/platzi-market/platzi-market/src/main/resources/application-dev.properties
@@ -1,1 +1,10 @@
 server.port=8090
+
+#Data
+spring.datasource.url = jdbc:postgresql://localhost:5432/platzi-market
+spring.datasource.username = postgres
+spring.datasource.password = Basket2001
+
+
+
+
