--- a/Curso_de_Java_Spring1/platzi-market/platzi-market/build.gradle
+++ b/Curso_de_Java_Spring1/platzi-market/platzi-market/build.gradle
@@ -23,6 +23,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	runtimeOnly 'org.postgresql:postgresql' // la forma de conectar postgresql con proyectos maven
+
 }
 
 tasks.named('test') {
